Fix error of product images being distorted when displayed

--- a/src/Pages/ShopPage/ProductMarketPlace.css
+++ b/src/Pages/ShopPage/ProductMarketPlace.css
@@ -22,6 +22,7 @@
 }
 
 .product-img img {
+    object-fit: contain;
     width: 100%;
     height: 100%;
 
